# plasma-workspace

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  CODEMAP.md  ConfigureChecks.cmake  HACKING  Messages.sh  README.md  README.pam  activity.cpp  activity.h  c_ptr.h  config-KDECI_BUILD.h.cmake  config-WaylandProtocols.h.cmake  config-X11.h.cmake  config-ktexteditor.h.cmake  config-unix.h.cmake  config-workspace.h.cmake  configview.cpp  configview.h  containermetadata.desktop  containmentconfigview.cpp  containmentconfigview.h  cppcheck-local-defines.xml  cppcheck-qt-extra-defines.xml  cppcheck-suppressions.xml  currentcontainmentactionsmodel.cpp  currentcontainmentactionsmodel.h  desktopcorona.cpp  desktopcorona.h  desktopview.cpp  desktopview.h  draghelper.h  interactiveconsole.cpp  interactiveconsole.h  kidenticongenerator.cpp  lookandfeelpackage.cpp  (+33 more)
appiumtests/: CMakeLists.txt  analogclocktest.py  appmenutest.py  batterymonitortest.py  calendartest.py  cameraindicatortest.py  clipboardtest.py  devicenotifiertest.py  digitalclocktest.py  icontest.py  kcm_autostart_test.py  kcm_colors_test.py  kcm_cursortheme_test.py  kcm_desktoptheme_test.py  kcm_feedback_test.py  kcm_fontinst_test.py  kcm_fonts_test.py  kcm_icons_test.py  kcm_lookandfeel_test.py  kcm_nightcolor_test.py  kcm_notifications_test.py  kcm_regionandlang_test.py  kcm_soundtheme_test.py  kcm_style_test.py  kcm_users_test.py  lock_logouttest.py  lockscreentest.py  logoutgreetertest.py  manage-inputmethodtest.py  mediacontrollertest.py  notificationstest.py  plasmoidtest.py  systemtraytest.py
applets/: CMakeLists.txt  Mainpage.dox
appmenu/: CMakeLists.txt  appmenu.cpp  appmenu.desktop  appmenu.h  appmenu.json  appmenu_dbus.cpp  appmenu_dbus.h  glowbar.cpp  glowbar.h  gtkicons.h  kdbusimporter.h  menubar.cpp  menubar.h  menubutton.cpp  menubutton.h  menuimporter.cpp  menuimporter.h  menuwidget.cpp  menuwidget.h  org.kde.kappmenu.xml  shadows.cpp  shadows.h  topmenubar.cpp  topmenubar.h  verticalmenu.cpp  verticalmenu.h
components/: BatteryIcon.qml  CMakeLists.txt  Messages.sh  qmldir  shellprivateplugin.cpp  shellprivateplugin.h
container/: CMakeLists.txt  systemtraycontainer.cpp
dataengines/: CMakeLists.txt  Mainpage.dox
devicenotifications/: CMakeLists.txt  Messages.sh  devicenotifications.cpp  devicenotifications.h  devicenotifications.json
donationmessage/: CMakeLists.txt  Messages.sh  donationmessage.cpp  donationmessage.h  donationmessage.json  donationmessage.json.license  donationmessage.notifyrc
drkonqi/: .kateconfig  AUTHORS  CMakeLists.txt  ExtraDesktop.sh  Messages.sh  README  ToDo  aboutbugreportingdialog.cpp  aboutbugreportingdialog.h  applicationdetailsexamples.cpp  applicationdetailsexamples.h  backtracegenerator.cpp  backtracegenerator.h  backtraceratingwidget.cpp  backtraceratingwidget.h  backtracewidget.cpp  backtracewidget.h  bugreportaddress.h  config-drkonqi.h.cmake  crashedapplication.cpp  crashedapplication.h  debugger.cpp  debugger.h  debuggerlaunchers.cpp  debuggerlaunchers.h  debuggermanager.cpp  debuggermanager.h  debugpackageinstaller.cpp  debugpackageinstaller.h  detachedprocessmonitor.cpp  detachedprocessmonitor.h  drkonqi-rename-config-section.upd  drkonqi.cpp  drkonqi.h  drkonqi_globals.h  drkonqibackends.cpp  drkonqibackends.h  drkonqidialog.cpp  drkonqidialog.h  findconfigdatajob.cpp  (+10 more)
freespacenotifier/: CMakeLists.txt  Messages.sh  README  freespacenotifier.cpp  freespacenotifier.desktop  freespacenotifier.h  freespacenotifier.json  freespacenotifier.kcfg  freespacenotifier.notifyrc  freespacenotifier_prefs_base.ui  module.cpp  module.h  settings.kcfgc
geoclue/: CMakeLists.txt  agent.cpp  agent.h  main.cpp  notifier.cpp  notifier.h  org.freedesktop.GeoClue2.Manager.xml  plasma-geoclue-agent.service.in  receiver.cpp  receiver.h
geotimezoned/: CMakeLists.txt  Messages.sh  geotimezoned.json  geotimezonedstate.kcfg  geotimezonemodule.cpp  geotimezonemodule.h  org.freedesktop.timedated1.xml
gmenu-dbusmenu-proxy/: CMakeLists.txt  Messages.sh  actions.cpp  actions.h  com.canonical.dbusmenu.xml  gdbusmenutypes_p.cpp  gdbusmenutypes_p.h  gmenudbusmenuproxy.desktop  icons.cpp  icons.h  main.cpp  menu.cpp  menu.h  menuproxy.cpp  menuproxy.h  org.gtk.Actions.xml  org.gtk.Menus.xml  plasma-gmenudbusmenuproxy.service.in  utils.cpp  utils.h  window.cpp  window.h
interactiveconsole/: CMakeLists.txt  Messages.sh  interactiveconsole.cpp  interactiveconsole.h  main.cpp  org.kde.plasma-interactiveconsole.desktop
kcms/: CMakeLists.txt  kcms-common.cpp  kcms-common_p.h
kglobalaccel/: CMakeLists.txt  Messages.sh  component.cpp  component.h  globalshortcut.cpp  globalshortcut.h  globalshortcutcontext.cpp  globalshortcutcontext.h  globalshortcutsregistry.cpp  globalshortcutsregistry.h  kglobalaccel.desktop  kglobalaccel.notifyrc  kglobalaccel_mac.cpp  kglobalaccel_mac.h  kglobalaccel_qws.cpp  kglobalaccel_qws.h  kglobalaccel_win.cpp  kglobalaccel_win.h  kglobalaccel_x11.cpp  kglobalaccel_x11.h  kglobalacceld.cpp  kglobalacceld.h  kglobalshortcutinfo_p.h  main.cpp  org.kde.kglobalaccel.service.in
klipper/: CMakeLists.txt  LibKlipperConfig.cmake.in  Messages.sh  actionsconfig.ui  actionstreewidget.cpp  actionstreewidget.h  clipboardengine.cpp  clipboardengine.h  clipboardjob.cpp  clipboardjob.h  clipboardservice.cpp  clipboardservice.h  clipcommandprocess.cpp  clipcommandprocess.h  config-klipper.h.cmake  configdialog.cpp  configdialog.h  databaseutils.cpp  databaseutils.h  editactiondialog.cpp  editactiondialog.h  editactiondialog.ui  editcommanddialog.cpp  editcommanddialog.h  generalconfig.ui  history.cpp  history.h  historycycler.cpp  historycycler.h  historyimageitem.cpp  historyimageitem.h  historyitem.cpp  historyitem.h  historymodel.cpp  historymodel.h  historystringitem.cpp  historystringitem.h  historyurlitem.cpp  historyurlitem.h  klipper-kconfigxt.upd  (+32 more)
krunner/: CMakeLists.txt  KRunnerAppDBusInterfaceConfig.cmake.in  Messages.sh  configdialog.cpp  configdialog.h  dialog.h  krunner.desktop  krunner.desktop.cmake  main.cpp  (+9 more)
(+12022 files in other folders)
